# conf0

./: .gitignore  CMakeLists.txt  FindAVAHI.cmake  FindLua.cmake  LICENSE  README.md  conf0.cpp  conf0.def  conf0.h  conf0.vcxproj  conf0.vcxproj.filters  luaM.h  luaconf0.cpp  luaconf0.h  luamisc.h  main.cpp  sysdefs.h  test.lua  test.vcxproj  test.vcxproj.filters
_/: conf0.cpp  conf0.h
output/: 0.bat  browse.lua  browse0conf.lua  conf0.lib  lua.bat  test.lua  test1.lua  test_browse.lua  test_register.lua
